sets correct font sizes on mobile version

--- a/src/components/workNotepadContent/WorkNotepadContent.css
+++ b/src/components/workNotepadContent/WorkNotepadContent.css
@@ -15,7 +15,7 @@
     width: 100%;
     /* Add padding to the left of the right column */
     text-align: left;
-    font-size: var(--font-size-keywords)
+    font-size: var(--right-column-worknotepad-font-size)
 }
 
 
